<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<!-- POM file generated with GWT webAppCreator -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>riscoss-webapp</groupId>
	<artifactId>riscoss-webapp</artifactId>
	<packaging>war</packaging>
	<version>0.0.6-SNAPSHOT</version>
	<name>RISCOSS Web App</name>

	<properties>
		<!-- Convenience property to set the GWT version -->
		<gwtVersion>2.6.0</gwtVersion>
		<!-- GWT needs at least java 1.5 -->
		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwtVersion}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwtVersion}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.googlecode.gflot</groupId>
			<artifactId>gflot</artifactId>
			<version>3.3.0</version>
			<scope>provided</scope>
		</dependency>

		<!-- Slider -->
		<dependency>
			<groupId>com.kiouri.sliderbar</groupId>
			<artifactId>gwt-slider-bar</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/gwt-slider-bar-1.0.jar</systemPath>
		</dependency>

		<!-- RestyGWT -->
		<dependency>
			<groupId>org.fusesource.restygwt</groupId>
			<artifactId>restygwt</artifactId>
			<version>1.4</version>
		</dependency>

		<!-- JAX-RS -->
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.0</version>
		</dependency>

		<!-- Jersey -->
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<!-- if your container implements Servlet API older than 3.0, use "jersey-container-servlet-core" -->
			<artifactId>jersey-container-servlet-core</artifactId>
			<version>2.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-moxy</artifactId>
			<version>2.9.1</version>
		</dependency>

		<!-- GWTUpload and Apache FileUpload -->
		<dependency>
			<groupId>com.googlecode.gwtupload</groupId>
			<artifactId>gwtupload</artifactId>
			<version>1.0.1</version><!--downgraded from 1.0.3 to aviod firefox reloading 
				problem -->
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.1</version>
		</dependency>

		<!-- RISCOSS DB -->
		<dependency>
			<groupId>riscoss-db</groupId>
			<artifactId>riscoss-db</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>riscoss-db</groupId>
			<artifactId>riscoss-db-orient</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.3.1</version>
		</dependency>

		<!-- RAE -->
		<dependency>
			<groupId>eu.riscoss</groupId>
			<artifactId>riscoss-api</artifactId>
			<version>0.24-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss</groupId>
			<artifactId>riscoss-dispatcher</artifactId>
			<version>0.24-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss</groupId>
			<artifactId>riscoss-fbk</artifactId>
			<version>0.24-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss</groupId>
			<artifactId>riscoss-kpa</artifactId>
			<version>0.24-SNAPSHOT</version>
		</dependency> 
		<!-- Smile.jar -->
		<dependency>
			<groupId>eu.riscoss</groupId>
			<artifactId>riscoss-platform-jsmile</artifactId>
			<version>${project.version}</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/smile.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>eu.riscoss.rdc</groupId>
			<artifactId>riscoss-rdc-api</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss.rdc</groupId>
			<artifactId>riscoss-rdc-app</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss.rdc</groupId>
			<artifactId>riscoss-rdc-github</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss.rdc</groupId>
			<artifactId>riscoss-rdc-jira</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss.rdc</groupId>
			<artifactId>riscoss-rdc-sonar</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss.rdc</groupId>
			<artifactId>riscoss-rdc-fossology</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss.rdc</groupId>
			<artifactId>riscoss-rdc-maven</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss.rdc</groupId>
			<artifactId>riscoss-rdc-olex</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss.rdc</groupId>
			<artifactId>riscoss-rdc-omm</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		
		<dependency>
			<groupId>eu.riscoss</groupId>
			<artifactId>riscoss-ram-core</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss</groupId>
			<artifactId>riscoss-ram-rae</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>eu.riscoss</groupId>
			<artifactId>riscoss-ram-ahp</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>

		<!-- Temporary dependency -->
		<dependency>
			<groupId>org.python</groupId>
			<artifactId>jython-standalone</artifactId>
			<version>2.7.0</version>
		</dependency>

	</dependencies>



	<build>
		<!-- Generate compiled stuff in the folder used for developing mode -->
		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

		<resources>
			<resource>
				<directory>config</directory>
			</resource>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
				<includes>
					<include>**/*.png</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>smile.jar</include>
        </includes>
        <targetPath>../lib/</targetPath>
      </resource>
    
		</resources>

		<plugins>

			<!-- GWT Maven Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>2.6.0</version>
				<executions>
					<execution>
						<phase>prepare-package</phase>  <!--added mm to test -->
						<goals>
							<!-- <goal>resources</goal> -->
							<goal>compile</goal>
							<goal>test</goal>
							<!-- <goal>i18n</goal> -->
							<goal>generateAsync</goal>
						</goals>
					</execution>
				</executions>
				<!-- Plugin configuration. There are many available options, see gwt-maven-plugin 
					documentation at codehaus.org -->
				<configuration>
					<productionMode>true</productionMode>  <!--added mm to test -->
					<extraJvmArgs>-Xss1024k -Xmx1024m -XX:MaxPermSize=256m</extraJvmArgs>

					<webResources>
						<resource>
							this is relative to the pom.xml directory
							<directory>src/main/java/eu/riscoss/client</directory>
							the list has a default value of **
							<includes>
								<include>**/*.png</include>
							</includes>
						</resource>
					</webResources>
					<resource>
						<directory>${basedir}/src/main/resources</directory>
						<includes>
							<include>**/png</include>
						</includes>
					</resource>
	
					
					
					<!-- ????? -->
					<!-- <modules> -->
					<!-- <module>eu.riscoss.analysis</module> -->
					<!-- <module>eu.riscoss.entities</module> -->
					<!-- <module>eu.riscoss.layers</module> -->
					<!-- <module>eu.riscoss.models</module> -->
					<!-- <module>eu.riscoss.rdcs</module> -->
					<!-- <module>eu.riscoss.report</module> -->
					<!-- <module>eu.riscoss.RiscossWebApp</module> -->
					<!-- <module>eu.riscoss.riskconfs</module> -->
					<!-- <module>eu.riscoss.whatifanalysis</module> -->
					<!-- </modules> -->

					<runTarget>RiscossWebApp/RiscossWebApp.html</runTarget>
					<hostedWebapp>${webappDirectory}</hostedWebapp>
					<!-- <i18nMessagesBundle>eu.riscoss.client.Messages</i18nMessagesBundle> -->
					<configuration>
					</configuration>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/classes/eu/riscoss/server/res</outputDirectory>
							<includeEmptyDirs>true</includeEmptyDirs>
							<resources>
								<resource>
									<directory>${basedir}/src/main/java/eu/riscoss/server/res</directory>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Copy static web files before executing gwt:run -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>exploded</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<webappDirectory>${webappDirectory}</webappDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<!-- <version>2.3.2</version> -->
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>  <!--added mm optional call with -Pdev -->
		<profile>
			<id>dev</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>gwt-maven-plugin</artifactId>
						<configuration>
							<draftCompile>true</draftCompile>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>